<resources>
    <string name="app_name">Cafe Redux</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirmPass">Confirm Password</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="restName">Restaurant Name</string>
    <string name="next">Next</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot Password</string>
    <string name="register">Register</string>
    <string name="neew">New</string>
    <string name="newfoodtype">New Food Type</string>
    <string name="foodtypeslabel">Select Food Types You Serve</string>
    <string name="createmenu">Create Menu</string>
    <string name="newmenuitem">New Menu Item</string>
    <string name="finish">Finish</string>
    <string name="title_activity_nav_drawer">NavDrawer</string>
    <string name="grab_bag_descrip">\tA Grab-Bag Meal is a meal created from an assortment of leftover ingredients. The meal may include any or all of the listed ingredients (and possibly extras not listed). Given the uncertainty of this meal\'s actual contents day-to-day, it is aimed primarily at repeat customers that already know and like your restaurant.\n\tWhen choosing ingredients to list, try to choose the ones most likely to appear in the day\'s dish.</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string-array name="filter_array">
        <item>All</item>
        <item>Favorites</item>
        <item>Price: High to Low</item>
        <item>Price: Low to High</item>
    </string-array>

    <string-array name="states_array">
        <item>AL</item>
        <item>AK</item>
        <item>AZ</item>
        <item>AR</item>
        <item>CA</item>
        <item>CO</item>
        <item>CT</item>
        <item>DE</item>
        <item>FL</item>
        <item>GA</item>
        <item>HI</item>
        <item>ID</item>
        <item>IL</item>
        <item>IN</item>
        <item>IA</item>
        <item>KS</item>
        <item>KY</item>
        <item>LA</item>
        <item>ME</item>
        <item>MD</item>
        <item>MA</item>
        <item>MI</item>
        <item>MN</item>
        <item>MS</item>
        <item>MO</item>
        <item>MT</item>
        <item>NE</item>
        <item>NV</item>
        <item>NH</item>
        <item>NJ</item>
        <item>NM</item>
        <item>NY</item>
        <item>NC</item>
        <item>ND</item>
        <item>OH</item>
        <item>OK</item>
        <item>OR</item>
        <item>PA</item>
        <item>RI</item>
        <item>SC</item>
        <item>SD</item>
        <item>TN</item>
        <item>TX</item>
        <item>UT</item>
        <item>VT</item>
        <item>VA</item>
        <item>WA</item>
        <item>WV</item>
        <item>WI</item>
        <item>WY</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
