<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="15dp"
    tools:context="com.capstone.naexpire.naexpirebusiness.ActivityRegister">

    <EditText
        android:id="@+id/txtRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:inputType="textEmailAddress"
        android:hint="Email"/>

    <EditText
        android:id="@+id/txtRegLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtRegEmail"
        android:hint="Last Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtRegFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtRegLastName"
        android:hint="First Name"
        android:inputType="text" />

    <EditText
        android:id="@+id/txtRegRestName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/txtRegFirstName"
        android:hint="@string/restName"
        android:inputType="textCapWords" />

    <EditText
        android:id="@+id/txtRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_below="@+id/txtRegEmail" />

    <EditText
        android:id="@+id/txtRegConfirmPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/confirmPass"
        android:inputType="textPassword"
        android:layout_below="@+id/txtRegPassword" />

    <Button
        android:id="@+id/btnRegNext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:onClick="clickNext"
        android:text="Submit"
        android:textColor="@color/colorAccent"
        android:background="@android:color/transparent"
        android:layout_below="@+id/txtRegConfirmPass" />

</RelativeLayout>
