<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="15dp"
    tools:context="com.capstone.naexpire.naexpirebusiness.ActivityRegRestrauntInfo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lblRestInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="Restaurant Information"
            android:textSize="24dp"
            android:textStyle="bold"/>

        <EditText
            android:id="@+id/txtRestaurantName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/restName"
            android:inputType="textCapWords"
            android:layout_below="@id/lblRestInfo" />

        <EditText
            android:id="@+id/txtPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Phone"
            android:inputType="phone"
            android:layout_below="@+id/txtRestaurantName" />

        <EditText
            android:id="@+id/txtRestDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtPhone"
            android:hint="Description"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/txtRestCommonFoods"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRestDescription"
            android:hint="Commonly Discounted Ingredients"
            android:inputType="textCapSentences" />

        <EditText
            android:id="@+id/txtAddress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address Line 1"
            android:inputType="textCapWords"
            android:layout_below="@id/txtRestCommonFoods" />

        <EditText
            android:id="@+id/txtAddress2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Address Line 2"
            android:inputType="textCapWords"
            android:layout_below="@id/txtAddress1" />

        <EditText
            android:id="@+id/txtCity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="City"
            android:inputType="textCapWords"
            android:layout_below="@id/txtAddress2" />

        <Spinner
            android:id="@+id/spnState"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_below="@id/txtCity"
            android:prompt="@string/address" />

        <EditText
            android:id="@+id/txtZip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:hint="Zip"
            android:inputType="textCapWords"
            android:layout_below="@id/txtCity"
            android:layout_toRightOf="@id/spnState"/>

        <TextView
            android:id="@+id/lblLoginInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_below="@+id/txtZip"
            android:layout_centerHorizontal="true"
            android:text="Login Credentials"
            android:textSize="24dp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtRegUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblLoginInfo"
            android:hint="@string/username"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtRegFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRegUsername"
            android:hint="First Name"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtRegLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRegFirstName"
            android:hint="Last Name"
            android:inputType="text" />

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtRegLastName"
            android:inputType="textEmailAddress"
            android:hint="Email"/>

        <EditText
            android:id="@+id/txtPersonalPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEmail"
            android:hint="Personal Phone"
            android:inputType="phone"/>

        <EditText
            android:id="@+id/txtRegPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@+id/txtPersonalPhone" />

        <EditText
            android:id="@+id/txtRegConfirmPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmPass"
            android:inputType="textPassword"
            android:layout_below="@+id/txtRegPassword" />

        <Button
            android:id="@+id/btnRegNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="clickNext"
            android:text="@string/next"
            android:textColor="@color/colorAccent"
            android:background="@android:color/transparent"
            android:layout_below="@+id/txtRegConfirmPass" />

    </RelativeLayout></ScrollView>

</RelativeLayout>
